DEV-1437 Fix attachment icon display on mobile screen

--- a/src/app/mail/mail.component.scss
+++ b/src/app/mail/mail.component.scss
@@ -1259,7 +1259,7 @@
       }
       .mail-file-size{
         position: absolute;
-        top: 17px;
+        top: 45px;
         right: 0;
         width: auto;
       }
